# CrossCraft-Classic

./: .gitignore  .gitmodules  CCC.filters  CCC.sln  CCC.vcxproj  CMakeLists.txt  MODDING.md  MakefilePSP  README.md  config.cfg
.github/workflows/: crosscraft.yml
assets/: LICENSE.txt
audio/: LICENSE.txt
model/: steve.yaml
mods/bedrockfloor/: mod.txt  script.lua
src/: AABB.h  AABB.hpp  BlockConst.hpp  ChunkMesh.cpp  ChunkMesh.h  ChunkMesh.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkStack.cpp  ChunkStack.h  ChunkStack.hpp  ChunkUtil.hpp  Client.cpp  Client.h  Clouds.hpp  Config.hpp  Controls.hpp  FastNoiseLite.h  Frustum.cpp  Frustum.h  GameStateControls.cpp  Gamestate.cpp  Gamestate.hpp  Main.cpp  MusicManager.cpp  MusicManager.hpp  Option.hpp  Particles.cpp  Player.cpp  Player.h  Player.hpp  TexturePackManager.cpp  TexturePackManager.hpp  Types.h  Utils.hpp  Vec3.h  World.cpp  World.h  World.hpp
src/Chunk/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkStack.cpp  ChunkStack.hpp  ChunkUtil.hpp
src/MP/: Client.cpp  Client.hpp  InPackets.cpp  InPackets.hpp  OutPackets.cpp  OutPackets.hpp  ProtocolTypes.hpp  Utility.hpp
src/Menu/: Menustate.cpp  Menustate.hpp
src/Modding/: Mod.cpp  Mod.hpp
src/Model/: Model.cpp  Model.hpp  Steve.cpp  SteveModel.hpp
src/Player/: AABB.hpp  BlockRep.cpp  BlockRep.hpp  Chat.cpp  Chat.hpp  PauseMenu.cpp  PauseMenu.hpp  Player.cpp  Player.hpp  PlayerInput.cpp
src/States/: MainState.cpp  MainState.h  SplashState.cpp  SplashState.h
src/UI/: TextHelper.cpp  TextHelper.hpp  UserInterface.cpp  UserInterface.hpp
src/World/: Clouds.cpp  Clouds.hpp  DigAction.cpp  DigAction.hpp  Particles.cpp  Particles.hpp  PlaceAction.cpp  PlaceAction.hpp  SaveData.cpp  SaveData.hpp  SelectionBox.cpp  SelectionBox.hpp  World.cpp  World.hpp
src/World/Generation/: ClassicGenerator.cpp  ClassicGenerator.hpp  CrossCraftGenerator.cpp  CrossCraftGenerator.hpp  NoiseUtil.cpp  NoiseUtil.hpp  WorldGenUtil.cpp  WorldGenUtil.hpp
